# routers/user.go
@@ -24,5 +24,6 @@ func RegisterUserRoutes(r *gin.Engine, db *mongo.Database) {
 	user.Use(middlewares.AuthMiddleware(jwtService))
 
 	user.GET("/", userController.GetCurrentUser)
+	user.GET("/all", userController.GetAllUsers)
 	user.GET("/:userId", userController.GetUserById)
 }
